<resources>
    <string name="app_name">CourierApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="auth">Авторизация</string>
    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Текущие заказы</string>
    <string name="menu_order" translatable="false">Заказ</string>
    <string name="menu_add_order" translatable="false">Создание заказа</string>
    <string name="menu_slideshow">Выполненные заказы</string>
    <string name="menu_map">Карта</string>
    <string name="menu_couriers">Сотрудники</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>