<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.courierapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_orders"
            app:destination="@id/nav_orders" />
    </fragment>
    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.courierapp.ui.order.OrderFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_completedorders"
        android:name="com.example.courierapp.ui.completedorder.CompletedOrderFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_completedorder" />

<!--    <activity-->
<!--        android:id="@+id/auth"-->
<!--        android:name="com.example.courierapp.auth.AuthActivity"-->
<!--        android:label="@string/menu_map"-->
<!--        tools:layout="@layout/activity_auth"/>-->
    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.courierapp.maps.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/activity_maps" />

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.example.courierapp.ui.order.DetailFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.courierapp.ui.order.AddOrderFragment"
        android:label="@string/menu_add_order"
        tools:layout="@layout/fragment_add_order" />

    <fragment
        android:id="@+id/nav_couriers"
        android:name="com.example.courierapp.ui.couriers.CourierFragment"
        android:label="@string/menu_add_order"
        tools:layout="@layout/fragment_courier" />

</navigation>